# PCLabsNSU

./: .clang-format  .gitignore  README.md
lab1/: main.c  main2.c  run.sh  tmp.py
lab10/: config.cfg  draw.sh  main.c
lab2-3-4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.c
lab7/: AlignedAllocator.cpp  AlignedAllocator.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixInv.cpp  MatrixInv.hpp  MatrixMult.cpp  MatrixMult.hpp  inversion_test.cpp  main.cpp
lab8/: config.cfg  draw.sh  main.c
lab9/: Makefile  draw.sh  main.c
